# spicy

./: .coverage  .envrc  .gitignore  .pre-commit-config.yaml  .pycln-config.yaml  README.md  TODO.md  book.toml  diff_outputs.sh  pyproject.toml  reset_author.sh  rule  run_diff_outputs.sh  run_mypy.sh  run_ruff.sh  run_self_check.py  run_self_check.sh  run_spec_check.sh  run_spec_check_on_test_data.sh  run_spicy_on_test_data.py  run_spicy_on_test_data.sh  run_test_spec_check.sh  run_tests.sh
docs/: SUMMARY.md  architecture.md  spicy.yaml  user_manual.md
docs/spec_criteria/: spec_requirement_design.md  spec_stakeholder_need_design.md  spec_stakeholder_requirement_design.md  spec_sw_unit_settings_config.md  spec_system_element_design.md  spec_system_requirement_design.md
docs/spicy_spec/: detailed_design.md  software_architecture.md  stakeholder_needs.md  stakeholder_reqs.md  use_cases.md
docs/spicy_spec/system/: sys_req_spec_text_format.md
src/spicy/: __init__.py  check_spec.py  check_spec_issues.py  check_use_cases.py  config.py  entry_point.py  fixes.py  gather.py  generate_tdp.py  link_fixes.py  md_link_check.py  md_read.py  render_spec_issues.py  render_use_case_issues.py  review.py
src/spicy/parser/: __init__.py  single_spec_builder.py  spec_element.py  spec_parser.py  spec_utils.py  use_case_constants.py
src/spicy/spec/: __init__.py  builder.py  parser.py  spec_element.py  spec_element_base.py  spec_software_component.py  spec_software_requirement.py  spec_software_unit.py  spec_stakeholder_need.py  spec_stakeholder_requirement.py  spec_system_architecture.py  spec_system_element.py  spec_system_element_design.md  spec_system_integration.py  spec_system_qualification.py  spec_system_requirement.py  spec_system_requirement_design.md  spec_validation.py  specs.yaml  trace.md
src/spicy/use_cases/: __init__.py  builder.py  mappings.py  use_case.py
tests/: __init__.py  conftest.py  run.sh  test_check_spec.py  test_check_spec_issues.py  test_check_use_cases.py  test_fixes.py  test_gather.py  test_link_fixes.py  test_md_link_check.py  test_md_read.py  test_review.py  test_spec.py  test_spec_parser.py  test_use_cases.py  z_run.sh
tests/cli/: __init__.py  test_check_spec.py  test_entry_point.py
tests/cookie_spec/: spicy.yaml  stakeholder_needs.md  stakeholder_requirements.md  system_requirements.md
tests/cookie_spec/spec/: spec_swe1_software_requirements.md  spec_swe2_software_components.md  spec_swe3_software_units.md  spec_sys1_stakeholder_requirements.md  spec_sys2_system_requirements.md  spec_sys3_system_architecture.md  spec_sys4_system_integration.md  spec_sys5_system_qualification.md
tests/parser/: __init__.py  test_single_spec_builder.py  test_spec_element.py  test_spec_parser.py  test_spec_utils.py  test_use_case_constants.py
tests/simple_test_spec/: complete_spec.md
tests/spec/: __init__.py  test_spec.py
tests/test_data/: 01_simple_valid_sys_req.md
tests/test_data/bad_links_spec/: complete_spec.md  spicy.yaml
tests/test_data/cookie_spec/: software_architecture.md  software_component_integration.md  software_component_tests.md  software_components.md  software_qualification.md  software_requirements.md  software_unit_integration.md  software_unit_tests.md  software_units.md  stakeholder_needs.md  stakeholder_requirements.md  system_elements.md  system_integration.md  system_qualification.md  system_requirements.md  use_cases.md  validation.md
tests/test_data/fixable_links_spec/: complete_spec.md  software.md  spicy.yaml  stakeholder.md  system.md  usecases.md
tests/test_data/hierarchical_test_spec/: spicy.yaml
tests/use_cases/: __init__.py  test_use_cases.py  test_use_cases_mappings.py
(+66 files in other folders)
