[project]
name = "spicy"
version = "0.1.0"
description = "Almost an mdneeds"
readme = "README.md"
authors = [
    { name = "Richard Fabian", email = "raspo1@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "markdown-it-py>=3.0.0",
    "mdformat>=0.7.22",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-forked>=1.6.0",
    "pytest-xdist>=3.6.1",
]

[project.scripts]
spicy = "spicy.check_spec:run"
spicecheck = "spicy.check_use_cases:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
#select = ["E", "F", "UP", "B", "SIM", "I", "C", "D1", "D20", "D300", "D4"]
ignore = ["D203", "D213", "FIX002", "TD003"]
#ignore = ["D203", "ANN204"]

# Interesting rules
# RUF105

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
    #"PLR2004", # Magic value used in comparison, ...
    #"S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]
