[project]
name = "spicy"
version = "0.1.2"
description = "Almost an mdneeds"
readme = "README.md"
authors = [
    { name = "Richard Fabian", email = "raspo1@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "markdown-it-py>=3.0.0",
    "mdformat>=0.7.22",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-forked>=1.6.0",
    "pytest-xdist>=3.6.1",
    "pyyaml>=6.0.2",
    "ruff>=0.12.2",
]

[project.scripts]
spicy = "spicy.entry_point:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "FIX002", "TD003", "TD002", "S"]

# Interesting rules
# RUF105

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
    #"PLR2004", # Magic value used in comparison, ...
    #"S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]

[tool.mypy]
ignore_missing_imports=true

[tool.coverage.report]
exclude_also = [
    # Comments to turn coverage on and off:
    'no cover: start(?s:.)*?no cover: stop',
    # A pragma comment that excludes an entire file:
    '\A(?s:.*# pragma: exclude file.*)\Z',
]
